--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
+    "pdf-parse": "^2.4.5",
     "postgres": "^3.4.8",
     "zod": "^4.3.6"
   }
