--- a/capstone/package.json
+++ b/capstone/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
@@ -33,6 +34,7 @@
   "dependencies": {
     "argon2": "^0.44.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
